--- a/templates/default/redis.conf.erb
+++ b/templates/default/redis.conf.erb
@@ -1,3 +1,5 @@
+<% redis_2_4 = (node["redis2"]["version"].split(".").map(&:to_i) <=> [2, 4]) < 0 %>
+<% def critical(val); raise RuntimeError unless val; val; end %>
 # Redis configuration file template
 
 # Note on units: when memory size is needed, it is possible to specifiy
@@ -22,14 +24,14 @@ pidfile /var/run/redis/<%= @instance_name %>.pid
 
 # Accept connections on the specified port, default is 6379.
 # If port 0 is specified Redis will not listen on a TCP socket.
-port <%= @conf[:port] %>
+port <%= @conf["port"] %>
 
 # If you want you can bind a single interface, if the bind option is not
 # specified all the interfaces will listen for incoming connections.
 #
 # bind 127.0.0.1
 <% if @conf.has_key? :bindaddress %>
-bind <%= @conf[:bindaddress] %>
+bind <%= @conf["bindaddress"] %>
 <% end %>
 
 # Specify the path for the unix socket that will be used to listen for
@@ -38,11 +40,11 @@ bind <%= @conf[:bindaddress] %>
 #
 # unixsocket /tmp/redis.sock
 <% if @conf.has_key? :socket %>
-unixsocket <%= @conf[:socket] %>
+unixsocket <%= @conf["socket"] %>
 <% end %>
 
 # Close the connection after a client is idle for N seconds (0 to disable)
-timeout <%= @conf[:timeout] %>
+timeout <%= @conf["timeout"] %>
 
 # Set server verbosity to 'debug'
 # it can be one of:
@@ -55,7 +57,7 @@ loglevel notice
 # Specify the log file name. Also 'stdout' can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile <%= ::File.join(node[:redis][:log_dir], "redis_#{@instance_name}.log") %>
+logfile <%= ::File.join(node["redis2"]["log_dir"], "redis_#{@instance_name}.log") %>
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
@@ -70,7 +72,7 @@ syslog-facility USER
 # Set the number of databases. The default database is DB 0, you can select
 # a different one on a per-connection basis using SELECT <dbid> where
 # dbid is a number between 0 and 'databases'-1
-databases <%= @conf[:databases] %>
+databases <%= @conf["databases"] %>
 
 ################################ SNAPSHOTTING  #################################
 #
@@ -88,7 +90,7 @@ databases <%= @conf[:databases] %>
 #
 #   Note: you can disable saving at all commenting all the "save" lines.
 
-<% if @conf[:bgsave] %>
+<% if @conf["bgsave"] %>
 save 900 1
 save 300 10
 save 60 10000
@@ -101,7 +103,7 @@ save 60 10000
 rdbcompression yes
 
 # The filename where to dump the DB
-dbfilename <%= @conf[:dumpdb_filename] %>
+dbfilename <%= @conf["dumpdb_filename"] %>
 
 # The working directory.
 #
@@ -111,9 +113,9 @@ dbfilename <%= @conf[:dumpdb_filename] %>
 # Also the Append Only File will be created inside this directory.
 # 
 # Note that you must specify a directory here, not a file name.
-dir <%= @conf[:data_dir] %>
+dir <%= @conf["data_dir"] %>
 
-<% unless @master.nil? %>
+<% if @master.is_a? ::Chef::Node %>
 ################################# REPLICATION #################################
 
 # Master-Slave replication. Use slaveof to make a Redis instance a copy of
@@ -121,15 +123,15 @@ dir <%= @conf[:data_dir] %>
 # so for example it is possible to configure the slave to save the DB with a
 # different interval, or to listen to another port, and so on.
 #
-slaveof <%= @master[:ipaddress] %> <%= @master[:redis][:instances][@instance_name][:port] %>
+slaveof <%= @master["ipaddress"] %> <%= critical @master["redis2"]["instances"][@instance_name]["port"] %>
 
 # If the master is password protected (using the "requirepass" configuration
 # directive below) it is possible to tell the slave to authenticate before
 # starting the replication synchronization process, otherwise the master will
 # refuse the slave request.
 #
-<% if @master[:redis][:requirepass] %>
-masterauth <%= master[:redis][:requirepass] %>
+<% if @master["redis2"]["requirepass"] %>
+masterauth <%= @master["redis2"]["requirepass"] %>
 <% end %>
 
 # When a slave lost the connection with the master, or when the replication
@@ -159,8 +161,8 @@ slave-serve-stale-data yes
 # 150k passwords per second against a good box. This means that you should
 # use a very strong password otherwise it will be very easy to break.
 #
-<% if @conf[:requirepass] %>
-requirepass <% @conf[:requirepass] %>
+<% if @conf["requirepass"] %>
+requirepass <% @conf["requirepass"] %>
 <% end %>
 
 # Command renaming.
@@ -187,7 +189,7 @@ requirepass <% @conf[:requirepass] %>
 # Once the limit is reached Redis will close all the new connections sending
 # an error 'max number of clients reached'.
 #
-<% if @conf[:maxclients] %>maxclients <%= node[:redis][:maxclients] %><% end %>
+<% if @conf["maxclients"] %>maxclients <%= node["redis2"]["maxclients"] %><% end %>
 
 # Don't use more memory than the specified amount of bytes.
 # When the memory limit is reached Redis will try to remove keys with an
@@ -236,10 +238,10 @@ requirepass <% @conf[:requirepass] %>
 # using the following configuration directive.
 #
 # maxmemory-samples 3
-<% if @conf[:maxmemory] %>
-maxmemory <%= @conf[:maxmemory] %>
-maxmemory-policy <%= @conf[:maxmemory_policy] %>
-maxmemory-samples <%= @conf[:maxmemory_samples] %>
+<% if @conf["maxmemory"] %>
+maxmemory <%= @conf["maxmemory"] %>
+maxmemory-policy <%= @conf["maxmemory_policy"] %>
+maxmemory-samples <%= @conf["maxmemory_samples"] %>
 <% end %>
 
 ############################## APPEND ONLY MODE ###############################
@@ -260,7 +262,7 @@ maxmemory-samples <%= @conf[:maxmemory_samples] %>
 # IMPORTANT: Check the BGREWRITEAOF to check how to rewrite the append
 # log file in background when it gets too big.
 
-appendonly <%= @conf[:appendonly] %>
+appendonly <%= @conf["appendonly"] %>
 
 # The name of the append only file (default: "appendonly.aof")
 # appendfilename appendonly.aof
@@ -285,7 +287,7 @@ appendonly <%= @conf[:appendonly] %>
 #
 # If unsure, use "everysec".
 
-appendfsync <%= @conf[:appendfsync] %>
+appendfsync <%= @conf["appendfsync"] %>
 
 # When the AOF fsync policy is set to always or everysec, and a background
 # saving process (a background save or AOF log background rewriting) is
@@ -305,8 +307,9 @@ appendfsync <%= @conf[:appendfsync] %>
 # 
 # If you have latency problems turn this to "yes". Otherwise leave it as
 # "no" that is the safest pick from the point of view of durability.
-no-appendfsync-on-rewrite <%= @conf[:no_appendfsync_on_rewrite] %>
+no-appendfsync-on-rewrite <%= @conf["no_appendfsync_on_rewrite"] %>
 
+<% if redis_2_4 -%>
 ################################ VIRTUAL MEMORY ###############################
 
 # Virtual Memory allows Redis to work with datasets bigger than the actual
@@ -318,7 +321,7 @@ no-appendfsync-on-rewrite <%= @conf[:no_appendfsync_on_rewrite] %>
 # To enable VM just set 'vm-enabled' to yes, and set the following three
 # VM parameters accordingly to your needs.
 
-vm-enabled <%= @conf[:vm][:enabled] %>
+vm-enabled <%= @conf["vm"]["enabled"] %>
 
 # This is the path of the Redis swap file. As you can guess, swap files
 # can't be shared by different Redis instances, so make sure to use a swap
@@ -331,7 +334,7 @@ vm-enabled <%= @conf[:vm][:enabled] %>
 # *** WARNING *** if you are using a shared hosting the default of putting
 # the swap file under /tmp is not secure. Create a dir with access granted
 # only to Redis user and configure Redis to create the swap file there.
-vm-swap-file <%= @conf[:vm][:swap_file] %>
+vm-swap-file <%= @conf["vm"]["swap_file"] %>
 
 # vm-max-memory configures the VM to use at max the specified amount of
 # RAM. Everything that deos not fit will be swapped on disk *if* possible, that
@@ -341,7 +344,7 @@ vm-swap-file <%= @conf[:vm][:swap_file] %>
 # default, just specify the max amount of RAM you can in bytes, but it's
 # better to leave some margin. For instance specify an amount of RAM
 # that's more or less between 60 and 80% of your free RAM.
-vm-max-memory <%= @conf[:vm][:max_memory] %>
+vm-max-memory <%= @conf["vm"]["max_memory"] %>
 
 # Redis swap files is split into pages. An object can be saved using multiple
 # contiguous pages, but pages can't be shared between different objects.
@@ -352,7 +355,7 @@ vm-max-memory <%= @conf[:vm][:max_memory] %>
 # If you use a lot of small objects, use a page size of 64 or 32 bytes.
 # If you use a lot of big objects, use a bigger page size.
 # If unsure, use the default :)
-vm-page-size <%= @conf[:vm][:page_size] %>
+vm-page-size <%= @conf["vm"]["page_size"] %>
 
 # Number of total memory pages in the swap file.
 # Given that the page table (a bitmap of free/used pages) is taken in memory,
@@ -365,7 +368,7 @@ vm-page-size <%= @conf[:vm][:page_size] %>
 #
 # It's better to use the smallest acceptable value for your application,
 # but the default is large in order to work in most conditions.
-vm-pages <%= @conf[:vm][:pages] %>
+vm-pages <%= @conf["vm"]["pages"] %>
 
 # Max number of VM I/O threads running at the same time.
 # This threads are used to read/write data from/to swap file, since they
@@ -376,7 +379,8 @@ vm-pages <%= @conf[:vm][:pages] %>
 #
 # The special value of 0 turn off threaded I/O and enables the blocking
 # Virtual Memory implementation.
-vm-max-threads <%= @conf[:vm][:max_threads] %>
+vm-max-threads <%= @conf["vm"]["max_threads"] %>
+<% end -%>
 
 ############################### ADVANCED CONFIG ###############################
 
@@ -384,8 +388,10 @@ vm-max-threads <%= @conf[:vm][:max_threads] %>
 # have at max a given numer of elements, and the biggest element does not
 # exceed a given threshold. You can configure this limits with the following
 # configuration directives.
+<% if redis_2_4 -%>
 hash-max-zipmap-entries 512
 hash-max-zipmap-value 64
+<% end -%>
 
 # Similarly to hashes, small lists are also encoded in a special way in order
 # to save a lot of space. The special representation is only used when
@@ -418,7 +424,7 @@ set-max-intset-entries 512
 #
 # use "activerehashing yes" if you don't have such hard requirements but
 # want to free memory asap when possible.
-activerehashing <%= @conf[:activerehashing] %>
+activerehashing <%= @conf["activerehashing"] %>
 
 ################################## INCLUDES ###################################
 
